# thala

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: cli.rs  main.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  tracing.rs  types.rs  validation.rs
src/: cli.rs  identity.rs  logger.rs  main.rs  message.rs  node.rs  tracing_config.rs  types.rs  validation.rs
