[package]
name = "thala"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
jsonrpsee = { version = "0.26.0", features = ["server"] }
litep2p = "0.11.1"
nu-ansi-term = "0.50"
postcard = { version ="1.1.3", features = ["use-std"] }
serde = "1.0.228"
tokio = { version = "1.44.1", features = [
  "rt",
  "macros",
  "net",
  "rt-multi-thread",
  "io-util",
  "sync",
  "time",
]}
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["serde"] }
sysinfo = "0.37.2"
nvml-wrapper = { version="0.11.0", features = ["serde"] }
