[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["client", "shared"]

[workspace.dependencies]
# thala
shared = { path = "./shared" }
# misc
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
jsonrpsee = { version = "0.26.0", features = ["server", "http-client"] }
litep2p = "0.11.1"
nu-ansi-term = "0.50"
nvml-wrapper = { version="0.11.0", features = ["serde"] }
postcard = { version ="1.1.3", features = ["use-std"] }
serde = "1.0.228"
sysinfo = "0.37.2"
tokio = { version = "1.44.1", features = [
  "rt",
  "macros",
  "net",
  "rt-multi-thread",
  "io-util",
  "sync",
  "time",
]}
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["serde"] }


[package]
name = "thala"
version.workspace = true
edition.workspace = true

[dependencies]
shared.workspace = true

anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
jsonrpsee.workspace = true
litep2p.workspace = true
nvml-wrapper.workspace = true
postcard.workspace = true
serde.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
